# bluericetemp

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: App.cpp.DAF0C434DC5FAA72.idx  App.hpp.2B77DF4E843FF152.idx  UI.cpp.08ADBE30504B9FDE.idx  UI.hpp.856361C68CB7DC93.idx  bluetooth.cpp.68412B4CCB5F5C3F.idx  bluetooth.hpp.5F8E295A141893DF.idx  main.cpp.3F53E1BA9E827238.idx
giomm-2.68/giomm/: action.h  actiongroup.h  actionmap.h  appinfo.h  appinfomonitor.h  applaunchcontext.h  application.h  applicationcommandline.h  asyncinitable.h  asyncresult.h  bufferedinputstream.h  bufferedoutputstream.h  bytesicon.h  cancellable.h  charsetconverter.h  converter.h  converterinputstream.h  converteroutputstream.h  credentials.h  datainputstream.h  dataoutputstream.h  dbusactiongroup.h  dbusaddress.h  dbusauthobserver.h  dbusconnection.h  dbuserror.h  dbuserrorutils.h  dbusinterface.h  dbusinterfaceskeleton.h  dbusinterfacevtable.h  dbusintrospection.h  dbusmenumodel.h  dbusmessage.h  dbusmethodinvocation.h  dbusobject.h  dbusobjectmanager.h  dbusobjectmanagerclient.h  dbusobjectmanagerserver.h  dbusobjectproxy.h  dbusobjectskeleton.h  (+102 more)
giomm-2.68/giomm/private/: action_p.h  actiongroup_p.h  actionmap_p.h  appinfo_p.h  appinfomonitor_p.h  applaunchcontext_p.h  application_p.h  applicationcommandline_p.h  asyncinitable_p.h  asyncresult_p.h  bufferedinputstream_p.h  bufferedoutputstream_p.h  bytesicon_p.h  cancellable_p.h  converter_p.h  (+127 more)
src/: App.cpp  App.hpp  UI.cpp  UI.hpp  bluetooth.cpp  bluetooth.hpp  main.cpp
style/: style.css
ui/: main.glade  main_window.ui  style.css
